deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb-deployment
  namespace: k6-operator-system
  labels:
    app: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      volumes:
      - name: influxdb-pv
        persistentVolumeClaim:
          claimName: influxdb-pvc
      containers:
      - name: influxdb
        image: influxdb:1.8-alpine
        ports:
          - containerPort: 8086
        volumeMounts:
          - mountPath: /var/lib/influxdb
            name: influxdb-pv
