deployment/external_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: influxdb-svc
  namespace: k6-operator-system
spec:
  type: NodePort
  selector:
      app: influxdb
  ports:
  - protocol: TCP
    port: 8086
    targetPort: 8086
