deployment/grafana_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana-svc
  namespace: k6-operator-system
spec:
  type: NodePort
  selector:
      app: grafana
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
