deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-svc
  namespace: k6-operator-system
spec:
  selector:
    name: influxdb
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
