deployment/grafana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: grafana-ingress
  namespace: k6-operator-system
spec:
  rules:
  - host: grafana.agapanto.com.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-svc
            port:
              number: 3000
  tls:
  - hosts:
    - grafana.agapanto.com.co
    secretName: grafana-com-co
